[project]
name = "element_container"
version = "0.1.0"
description = "Turn a Python class into a pretty-printed, nested namespace of constants."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Simon Niederberger" }]
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["element_container.py"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.7",
    "ty",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
